--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "1.3.0",
   "author": "sishen",
   "license": "MIT",
-  "description": "CLI to grenate project template",
-  "keywords": [],
+  "description": "CLI to create project template",
+  "keywords": [
+    "cli",
+    "create",
+    "template"
+  ],
   "publishConfig": {
     "access": "public"
   },
@@ -14,7 +18,6 @@
   "homepage": "https://github.com/sishen654/mazp-create-tpl",
   "repository": "https://github.com/sishen654/mazp-create-tpl",
   "type": "module",
-  "main": "index.js",
   "bin": {
     "cra": "index.js"
   },
@@ -25,7 +28,8 @@
     "test:watch": "vitest",
     "coverage": "vitest run --coverage",
     "p": "standard-version",
-    "c": " git push --tags"
+    "c": " git push --tags",
+    "push": "git checkout main & git push github-create-tpl main & git push gitee-create-tpl main"
   },
   "files": [
     "index.js",
