--- a/template/backend-koa/package.json
+++ b/template/backend-koa/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "koa-api",
+  "name": "",
   "version": "1.0.0",
   "author": "sishen",
   "license": "MIT",
   "description": "CLI to some JavaScript string utilities",
-  "keywords": [],
   "private": "true",
   "type": "module",
   "main": "index.js",
@@ -16,17 +15,14 @@
     "test:watch": "vitest",
     "coverage": "vitest run --coverage"
   },
-  "files": [
-    "index.js",
-    "template/",
-    "dist/"
-  ],
   "devDependencies": {
     "@types/koa": "2.13.5",
+    "@types/koa__cors": "3.3.0",
     "@types/koa__multer": "2.0.4",
     "@types/koa__router": "12.0.0",
     "@types/koa-bodyparser": "4.3.10",
     "@types/koa-static": "4.0.2",
+    "@types/koa2-ratelimit": "0.9.3",
     "@types/node": "18.11.4",
     "cross-env": "7.0.3",
     "gulp": "4.0.2",
@@ -41,13 +37,21 @@
     "vitest": "^0.24.3"
   },
   "dependencies": {
+    "@koa/cors": "4.0.0",
     "@koa/multer": "3.0.2",
     "@koa/router": "12.0.0",
+    "@mazp/dotenv": "1.2.2",
     "chalk": "5.1.2",
     "koa": "2.13.4",
     "koa-bodyparser": "4.3.0",
+    "koa-helmet": "6.1.0",
+    "koa-hpp2": "1.0.4",
+    "koa-mongo-sanitize": "1.1.0",
     "koa-router": "12.0.0",
     "koa-static": "5.0.0",
+    "koa-xss-sanitizer": "1.0.0",
+    "koa2-ratelimit": "1.1.2",
+    "mongoose": "6.9.0",
     "multer": "1.4.5-lts.1"
   }
 }
