--- a/template/backend-koa/package.json
+++ b/template/backend-koa/package.json
@@ -8,7 +8,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon /dist/index.js",
+    "dev": "nodemon node ./dist/index.js",
     "watch": "cross-env NODE_ENV=development gulp",
     "build": "cross-env NODE_ENV=production gulp",
     "test": "vitest run",
