--- a/template/util-lib/package.json
+++ b/template/util-lib/package.json
@@ -57,8 +57,5 @@
     "vite": "^3.2.4",
     "vitest": "^0.24.3"
   },
-  "dependencies": {
-    "chalk": "5.1.2",
-    "fs-extra": "10.1.0"
-  }
+  "dependencies": {}
 }
