--- a/template/util-template/package.json
+++ b/template/util-template/package.json
@@ -42,10 +42,8 @@
     "standard-version": "9.5.0",
     "typescript": "4.8.4",
     "vitest": "^0.24.3",
-    "vite": "^3.2.4"
-  },
-  "dependencies": {
-    "chalk": "5.1.2",
+    "vite": "^3.2.4",
     "fs-extra": "10.1.0"
-  }
+  },
+  "dependencies": {}
 }
