--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
     "test": "vitest run",
     "test:watch": "vitest",
     "coverage": "vitest run --coverage",
-    "p": "standard-version -r",
-    "ct": " git checkout main & git push gitee main --tags & git push github main --tags",
-    "push": "git checkout main & git push gitee main & git push github main"
+    "v": "standard-version -r",
+    "t": " git checkout main & git push gitee main --tags & git push github main --tags",
+    "p": "git checkout main & git push gitee main & git push github main"
   },
   "files": [
     "index.js",
