--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "rollup-plugin-esbuild": "5.0.0",
     "standard-version": "9.5.0",
     "typescript": "4.8.4",
+    "vite": "^5.0.10",
     "vitest": "0.24.3"
   },
   "dependencies": {
